[package]
name = "interview"
version = "0.1.1"
authors = ["Srikanth Suresh <srikwit@gmail.com>"]
edition = "2018"
description = "A Crate that aims to clear interview questions in the shortest number of function calls!"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "factorial"
path = "src/lib.rs"
